public/style.css
* {
    font-family: 'Tajawal', sans-serif;
    /* limiter la hauteur de <body> à 100%. */
    -moz-box-sizing: border-box; box-sizing: border-box; 
}
html {
    height: 100%;
}
body {
    min-height: 100%;
    margin: 0;
    padding: 0;
    position: relative;
}
h1 {
    font-family: 'Amatic SC', cursive;
}
h2, h3, h4, h5, h6 {
    font-family: 'Bad Script', cursive;
}

a, nav a {
    text-decoration: none;
    color:darkolivegreen;
}
a:hover, nav a:hover {
    color:darkgreen;
}

.container {
    padding-bottom: 50px;
    margin-bottom:50px;
}
footer {
    background-color:antiquewhite;
    border-top: 1px solid rgb(206, 205, 205);
    position: absolute; bottom: 0; left: 0; right: 0;
    margin-top:50px;
}

#scrollUp {
    /* position: fixed;
    bottom : 100px;
    right: 100px; */
    text-align: right;
    margin-right: 8%;
    margin-left: 8%;
    margin-top: -30px;
    opacity: 0.5;
}

